--- a/css/blocks/we-best.css
+++ b/css/blocks/we-best.css
@@ -62,7 +62,10 @@ ul {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
-      height: 100%; } }
+      height: 100%;
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; } }
 
 .content__block ul {
   list-style-type: none; }
@@ -76,6 +79,9 @@ ul {
   font-size: 4.5rem;
   font-weight: 400;
   line-height: 4rem; }
+  @media (max-width: 480px) {
+    .container__txt {
+      margin-top: 10%; } }
 
 .content__elem {
   display: -webkit-box;
