--- a/css/blocks/we-best.scss
+++ b/css/blocks/we-best.scss
@@ -63,6 +63,7 @@ ul {
 	@include phones {
 	flex-direction: column;
 	height: 100%; 
+	justify-content: space-evenly;
 }
 }
 .content__block ul {
@@ -78,6 +79,9 @@ ul {
 	font-size: 4.5rem;
 	font-weight: 400;
 	line-height: 4rem;
+	@include phones {
+		margin-top: 10%;
+	}
 }
 .content__elem{
 	display: flex;
