--- a/css/main.css
+++ b/css/main.css
@@ -530,9 +530,10 @@ body {
       justify-content: flex-start; } }
   @media (max-width: 480px) {
     .header {
-      -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-      justify-content: space-evenly; } }
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      margin-top: 5%; } }
 
 .img-hero {
   max-width: 100%;
@@ -650,7 +651,11 @@ a {
       top: 3%; } }
   @media (max-width: 480px) {
     .button {
-      position: unset; } }
+      position: unset;
+      width: 8.0625rem;
+      height: 3.1875rem;
+      font-size: 1rem;
+      margin-right: 15%; } }
 
 .hero__content {
   display: -webkit-box;
@@ -681,6 +686,9 @@ a {
 
 .content__txt li {
   list-style-type: none; }
+  @media (max-width: 768px) {
+    .content__txt li {
+      text-align: center; } }
 
 .content__img {
   margin-bottom: 6%; }
@@ -798,7 +806,10 @@ ul {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
-      height: 100%; } }
+      height: 100%;
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; } }
 
 .content__block ul {
   list-style-type: none; }
@@ -812,6 +823,9 @@ ul {
   font-size: 4.5rem;
   font-weight: 400;
   line-height: 4rem; }
+  @media (max-width: 480px) {
+    .container__txt {
+      margin-top: 10%; } }
 
 .content__elem {
   display: -webkit-box;
@@ -1228,7 +1242,10 @@ ul {
   margin: 0; }
   @media (max-width: 768px) {
     .accordeon__elements {
-      text-align: center; } }
+      text-align: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .team__dscr__block {
   display: -webkit-box;
@@ -1424,6 +1441,11 @@ ul {
   background-image: url(../img/bg-video.png);
   background-repeat: no-repeat;
   background-size: cover; }
+  @media (max-width: 768px) {
+    .work__page {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .work__page-txt {
   display: -webkit-box;
@@ -1550,6 +1572,9 @@ ul {
   -ms-flex-direction: column;
   flex-direction: column;
   width: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   height: 100vh;
   background-image: url(../img/order.png);
   background-repeat: no-repeat;
@@ -1824,7 +1849,8 @@ ul {
   cursor: pointer; }
   @media (max-width: 768px) {
     .button__clear {
-      right: 25%; } }
+      right: 28%;
+      bottom: -17%; } }
 
 .checkbox {
   display: none; }
@@ -2064,6 +2090,9 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column; }
+  @media (max-width: 768px) {
+    .footer__contacts-block {
+      margin-left: 2%; } }
   @media (max-width: 480px) {
     .footer__contacts-block {
       -ms-flex-pack: distribute;
@@ -2140,20 +2169,7 @@ ul {
   background-color: #fff;
   fill: #000; }
 
-.page__indicator {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  position: fixed;
-  top: 10%;
-  right: 10%; }
-
 .data__menu .data__circle {
-  position: relative;
   width: 6px;
   height: 6px;
   border-radius: 50%;
@@ -2178,7 +2194,14 @@ ul {
   right: 5%; }
 
 .data__menu {
-  position: unset !important; }
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: fixed;
+  right: 10%;
+  top: 10%; }
 
 .slider__menu {
   display: -webkit-box;
@@ -2484,7 +2507,7 @@ ul {
   left: 75%; }
   @media (max-width: 768px) {
     .burghers__btn {
-      bottom: 10%;
+      bottom: 9%;
       left: 60%; } }
   @media (max-width: 480px) {
     .burghers__btn {
