--- a/css/blocks/menu-page.css
+++ b/css/blocks/menu-page.css
@@ -86,8 +86,8 @@
   padding: 1.875rem;
   width: 28.25rem; }
 
-.accordeon-menu__elem:hover .accordeon-menu__content {
-  max-width: 31.25rem; }
-
 .accordeon-menu__elem:hover .accordeon-menu__btn-txt {
   color: #f9b43b; }
+
+.accordeon-menu__content.active {
+  max-width: 31.25rem; }
