--- a/css/blocks/people-page.css
+++ b/css/blocks/people-page.css
@@ -247,7 +247,7 @@
   background: #444;
   border-radius: 5px;
   padding: 20px;
-  width: 460px;
+  width: 28.75rem;
   height: 254px;
   color: #2f3234;
   margin: 0;
