--- a/css/blocks/burghers.scss
+++ b/css/blocks/burghers.scss
@@ -27,7 +27,6 @@ $phones: 480px;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  border: solid 1px #293342;
   background-color: #f9b43b;
     background-image: linear-gradient(to top, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%, #f9b43b 100%);
 
@@ -78,7 +77,7 @@ $phones: 480px;
   position: absolute;
   justify-content: space-between;
   flex-direction: column;
-  z-index: -2;
+
    @include tablets {
     flex-direction: row;
     width: 90%;
@@ -98,6 +97,7 @@ $phones: 480px;
   font-size: 14px;
   font-weight: 400;
   line-height: 28.11px;
+  position: relative;
 }
 .composition__img{
   display: flex;
@@ -113,6 +113,7 @@ $phones: 480px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: 1.5s;
 }
 .brg-img{
   width: 31.5625rem;
@@ -266,4 +267,51 @@ $phones: 480px;
   position: absolute;
   top: 50%;
   left: -3%;
+}
+
+
+.make__hover{
+  flex-direction: column;
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+  top: -189%;
+  left: 100%;
+  position: absolute;
+  width: 16.875rem;
+  height: 0px;
+  background-color: #ffffff;
+  opacity: 0.9;
+  border-radius: 2%;
+}
+.make__row{
+  display: flex;
+  width: 85%;
+  justify-content: space-between;
+}
+.make__txt{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 70%;
+  justify-content: space-between;
+}
+.make__txt-name{
+  color: #2f3234;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
+}
+.make__txt-price{
+  color: #2f3234;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+}
+
+.composition__elem:hover .make__hover {
+  height: 20.75rem;
+  display: flex;
 }
