--- a/css/blocks/people-page.scss
+++ b/css/blocks/people-page.scss
@@ -206,7 +206,7 @@ $phones: 480px;
     background: #444;
     border-radius: 5px;
     padding: 20px;
-    width: 460px;
+    width: 28.75rem;
     height: 254px;
     color: #2f3234;
     margin: 0;
