--- a/css/main.css
+++ b/css/main.css
@@ -1122,7 +1122,7 @@ ul {
   background: #444;
   border-radius: 5px;
   padding: 20px;
-  width: 460px;
+  width: 28.75rem;
   height: 254px;
   color: #2f3234;
   margin: 0;
@@ -1554,11 +1554,11 @@ ul {
   padding: 1.875rem;
   width: 28.25rem; }
 
-.accordeon-menu__elem:hover .accordeon-menu__content {
-  max-width: 31.25rem; }
-
 .accordeon-menu__elem:hover .accordeon-menu__btn-txt {
   color: #f9b43b; }
+
+.accordeon-menu__content.active {
+  max-width: 31.25rem; }
 
 .order__section {
   display: -webkit-box;
@@ -2169,39 +2169,62 @@ ul {
   background-color: #fff;
   fill: #000; }
 
-.data__menu .data__circle {
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background-color: #fff; }
-
-.data__menu .active {
+#myMenu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 13px;
-  height: 13px;
-  border: solid 1px #fff;
-  border-radius: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: fixed;
+  top: 7%;
+  right: 7%;
+  height: 11rem;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.nav_elem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.nav__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: 16px;
-  top: 5%;
-  right: 5%; }
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff; }
 
-.data__menu {
-  display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  position: fixed;
-  right: 10%;
-  top: 10%; }
+.nav_elem .active:before {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: solid 1px #fff;
+  width: 200%;
+  height: 200%;
+  border-radius: 50%;
+  content: '';
+  position: absolute; }
 
 .slider__menu {
   display: -webkit-box;
@@ -2215,7 +2238,6 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  border: solid 1px #293342;
   background-color: #f9b43b;
   background-image: -webkit-gradient(linear, left bottom, left top, from(#f9b43b), color-stop(48%, #eb8c38), color-stop(74%, #f9b43b), to(#f9b43b));
   background-image: -webkit-linear-gradient(bottom, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%, #f9b43b 100%);
@@ -2294,8 +2316,7 @@ ul {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column;
-  z-index: -2; }
+  flex-direction: column; }
   @media (max-width: 768px) {
     .slider__details {
       -webkit-box-orient: horizontal;
@@ -2323,7 +2344,8 @@ ul {
   font-family: 'Gagalin-Regular';
   font-size: 14px;
   font-weight: 400;
-  line-height: 28.11px; }
+  line-height: 28.11px;
+  position: relative; }
 
 .composition__img {
   display: -webkit-box;
@@ -2353,7 +2375,10 @@ ul {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center; }
+  justify-content: center;
+  -webkit-transition: 1.5s;
+  -o-transition: 1.5s;
+  transition: 1.5s; }
 
 .brg-img {
   width: 31.5625rem;
@@ -2547,6 +2572,72 @@ ul {
   position: absolute;
   top: 50%;
   left: -3%; }
+
+.make__hover {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  display: none;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  top: -189%;
+  left: 100%;
+  position: absolute;
+  width: 16.875rem;
+  height: 0px;
+  background-color: #ffffff;
+  opacity: 0.9;
+  border-radius: 2%; }
+
+.make__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 85%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.make__txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 70%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.make__txt-name {
+  color: #2f3234;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px; }
+
+.make__txt-price {
+  color: #2f3234;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.composition__elem:hover .make__hover {
+  height: 20.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .mobile-menu {
   display: -webkit-box;
