--- a/css/blocks/mapandfooter.scss
+++ b/css/blocks/mapandfooter.scss
@@ -185,11 +185,11 @@ $phones: 480px;
 }
 
 
-.nav_elem .active:before {
+#myMenu .active:before {
   display: flex;
   border: solid 1px #fff;
-  width: 200%;
-  height: 200%;
+  width: 16px;
+  height: 16px;
   border-radius: 50%;
   content: '';
   position: absolute;
