--- a/css/blocks/mapandfooter.css
+++ b/css/blocks/mapandfooter.css
@@ -182,13 +182,13 @@
   border-radius: 50%;
   background-color: #fff; }
 
-.nav_elem .active:before {
+#myMenu .active:before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   border: solid 1px #fff;
-  width: 200%;
-  height: 200%;
+  width: 16px;
+  height: 16px;
   border-radius: 50%;
   content: '';
   position: absolute; }
