--- a/css/main.css
+++ b/css/main.css
@@ -757,7 +757,7 @@ ul {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background-image: url(../img/bg_pg2.png);
+  background-image: url(../img/bg_pg2.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
 
@@ -1438,7 +1438,7 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  background-image: url(../img/bg-video.png);
+  background-image: url(../img/bg-video.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
   @media (max-width: 768px) {
@@ -1473,7 +1473,7 @@ ul {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(../img/meniu-page-bg.png);
+  background-image: url(../img/meniu-page-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
 
@@ -1576,7 +1576,7 @@ ul {
   -ms-flex-align: center;
   align-items: center;
   height: 100vh;
-  background-image: url(../img/order.png);
+  background-image: url(../img/order.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
 
